# clifs

./: .gitignore  CMakeLists.txt  README.md  makefile
docs/: notes.md
include/: clifs_data.h  clifs_tree.h  file_desc.h  params.h  state.h
src/: clifs_data.cpp  clifs_tree.cpp  file_desc.cpp  main.cpp
